Changing the name of the logo

--- a/app/views/gluttonberg/public/pages/restrict_site_access.html.haml
+++ b/app/views/gluttonberg/public/pages/restrict_site_access.html.haml
@@ -27,7 +27,7 @@
     .container-fluid
       .row
         .span5.offset4
-          = backend_logo("/assets/logo.png" , {:height => "46px"})
+          = backend_logo("/assets/gb_logo.png" , {:height => "46px"})
           %h1#login_title
             = Gluttonberg::Setting.get_setting("title")
     
