--- a/app/views/gluttonberg/admin/content/editors/_html_content.html.haml
+++ b/app/views/gluttonberg/admin/content/editors/_html_content.html.haml
@@ -4,4 +4,4 @@
   = enable_jwysiwyg_on_class(unique_class)
 
   %label.block_label= content.section_label
-  = text_area_tag(id_of_text_area , content.text, :class => "large tall #{unique_class}", :width => "545")
+  = text_area_tag(id_of_text_area , content.text, :class => "large tall #{unique_class}", :width => "520", :height => "200")
