--- a/app/views/gluttonberg/admin/exceptions/access_denied.html.haml
+++ b/app/views/gluttonberg/admin/exceptions/access_denied.html.haml
@@ -1,5 +1,11 @@
-%div.error{:style=>"margin:200px 200px 0px 0px;"}
-  %h2 Access Denied
-  
-  %p
-    You do not have access to this page. Please contact with CMS administrator.
+.row
+  .span6.offset5
+    = backend_logo("/assets/gb_logo.png" , {:height => "46px"})
+    %h1#login_title
+      = website_title
+    
+    %div#form.well
+      %h3
+        Access Denied
+      %p
+        You do not have access to this page. Please contact with CMS administrator.
