--- a/app/views/gluttonberg/admin/exceptions/not_acceptable.html.haml
+++ b/app/views/gluttonberg/admin/exceptions/not_acceptable.html.haml
@@ -1,2 +1,9 @@
-%div.error{:style=>"margin:200px 200px 0px 0px;"}
-  %h2 Request Not Acceptable
+.row
+  .span6.offset5
+    = backend_logo("/assets/gb_logo.png" , {:height => "46px"})
+    %h1#login_title
+      = website_title
+    
+    %div#form.well
+      %h3
+        Request Not Acceptable
