--- a/app/views/gluttonberg/public/exceptions/not_found.html.haml
+++ b/app/views/gluttonberg/public/exceptions/not_found.html.haml
@@ -1,6 +1,11 @@
-%div.error{:style=>"margin:200px 200px 0px 0px;"}
-  %h2 Page Not Found
-  
-  %p
-    The page you were looking for could not be found. Check the address and try again.
-  
+.row
+  .span6.offset5
+    = backend_logo("/assets/gb_logo.png" , {:height => "46px"})
+    %h1#login_title
+      = website_title
+    
+    %div#form.well
+      %h3
+        Page Not Found
+      %p
+        The page you were looking for could not be found. Check the address and try again.
