--- a/app/assets/stylesheets/admin-override.sass
+++ b/app/assets/stylesheets/admin-override.sass
@@ -32,3 +32,9 @@ td
   a.thumbnail
     :background #ffffff
     :width 160px
+    
+#edit-form
+  .span5
+    :margin 0 !important
+    :width 520px
+  
