redesigning the asset browser
Signed-off-by: Yuri Tomanek <yuri@tomanek.com.au>

--- a/app/assets/stylesheets/admin-override.sass
+++ b/app/assets/stylesheets/admin-override.sass
@@ -28,6 +28,9 @@ form
     input.span5, textarea.span5
       :width 510px
       
+  .span4
+    :width 370px !important
+  
 td
   a.thumbnail
     :background #ffffff
@@ -38,3 +41,20 @@ td
     :margin 0 !important
     :width 520px
   
+ul.thumbnails
+  p 
+    :margin 9px 0 0 !important
+    
+.modal
+  :position fixed !important
+  :top 50%
+  :left 50%
+
+.progress
+  :width 200px
+  :position fixed
+  :top 50%
+  :left 50%
+  :margin
+    :top -100px
+    :left -100px
