Asset browser fixes

--- a/app/views/gluttonberg/admin/asset_library/assets/_browser_root.html.haml
+++ b/app/views/gluttonberg/admin/asset_library/assets/_browser_root.html.haml
@@ -11,7 +11,7 @@
     %a{:href => "#upload", "data-toggle" => "tab"}
       Upload
 
-.tab-content
+.tab-content#assetsDisplay
   #recent.tab-pane.active
     - if @assets.blank?
       %ul.assetList
