Added logout button

--- a/app/views/layouts/gluttonberg.html.haml
+++ b/app/views/layouts/gluttonberg.html.haml
@@ -62,6 +62,8 @@
               Logged in as
               %a{:href => "#"}
                 = current_user.email
+              %a{:href => "/admin/logout"}
+                Logout 
           / /.nav-collapse
     .container-fluid
       = yield
