--- a/app/assets/stylesheets/admin-override.sass
+++ b/app/assets/stylesheets/admin-override.sass
@@ -19,18 +19,21 @@
       input.span4
         :width 420px
         
-
-
-  
+form
+  .span5
+    :margin 0 !important
+    :width 520px
+    
+    input[type="text"]
+      :width 510px
+      
+    textarea
+      :width 510px
+      :height 200px
 td
   a.thumbnail
     :background #ffffff
     :width 160px
-    
-#edit-form
-  .span5
-    :margin 0 !important
-    :width 520px
   
 ul.thumbnails
   p 
