--- a/app/views/layouts/bare.html.haml
+++ b/app/views/layouts/bare.html.haml
@@ -23,7 +23,7 @@
         <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
             
   %body#login
-    .container-fluid
+    .container
       = yield
     
 
